tests/cases/ownership/errors/move-borrowed-owner.ari
fn needs_both(shared: ref i64, owned: own i64) -> i64 {
  drop owned;
  return 0;
}

fn main() -> i64 {
  let token: own i64 = 5;
  return needs_both(ref token, token);
}
